fixed bug by content overflow in descussion page

--- a/lms/static/sass/discussion/_discussion-override.scss
+++ b/lms/static/sass/discussion/_discussion-override.scss
@@ -282,3 +282,7 @@ body .wrapper-course-material .course-tabs li a {
         border-color: $theme-link !important;
     }
 }
+
+.forum-nav-thread-title {
+    word-break: break-all;
+}
